fix : overflow x hidden

--- a/style-tela2.css
+++ b/style-tela2.css
@@ -5,6 +5,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .container {
     display: flex;
     gap: 70px;
